RESOLVED FIXED294493
Fix color flicker on edges of liquid glass on macOS Tahoe with site isolation enabled
https://bugs.webkit.org/show_bug.cgi?id=294493
Summary Fix color flicker on edges of liquid glass on macOS Tahoe with site isolation...
Alex Christensen
Reported 2025-06-13 23:26:50 PDT
Attachments
Alex Christensen
Comment 1 2025-06-13 23:35:46 PDT
EWS
Comment 2 2025-06-14 15:10:13 PDT
Committed 296235@main (7e720d823db1): <https://commits.webkit.org/296235@main> Reviewed commits have been landed. Closing PR #46752 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.